# Industrial-Copilot

./: .env.example  .gitignore  API_DOCUMENTATION.md  API_QUICK_REFERENCE.md  ARCHITECTURE.md  BENTO_GRID_DASHBOARD_COMPLETE.md  CONTROL_ROOM_IMPLEMENTATION.md  DASHBOARD_TESTING_GUIDE.md  ENERGY_COPILOT_README.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETE.md  QUICK_REFERENCE.md  README.md  SCADA_SYNOPTIC_COMPLETE.md  SIMULATION_LAB_COMPLETE.md  cursor-mcp-config.json  debug_output.py  dev.py  install-control-room.sh  output_format_example.py  package.json  pyproject.toml  requirements.txt  setup.sh  test_phase1.py  tsconfig.tsbuildinfo
.opencode/: opencode.json
.opencode/context/: opencode.md
.opencode/docs/: DATABASE_SCHEMA_COMPLETE.sql  DATABASE_SCHEMA_PRELIMINARY.md  DATABASE_SCHEMA_QUESTIONNAIRE.md  DATABASE_SCHEMA_REVISED.md  REACT_CHAT_COMPONENTS.md  WEB_CHAT_UI_SPECIFICATION.md  opencode_sdk.md
.opencode/migrations/: 001_initial_setup.sql  002_workspace_chat.sql  003_ml_energy.sql  004_notifications_sharing.sql  005_rls_policies.sql
backend/: main.py  requirements.txt
backend/core/: __init__.py  config.py  optimizer.py  streamer.py
backend/routers/: __init__.py  simulation.py
examples/: basic_usage.md  basic_usage.py
ml/: optimizer.py  senarios.ipynb  server.py
output/: bar_Bangalore_Population_Test.html  scatter_Auto_Start_Test.html
public/icons/: ICON_MAPPING.md  README.md
src/: background_server.py  server.py
src/assembly/: builder.py
src/layouts/: axes.py  interactions.py  (+1 more)
tests/: test_basic_traces.py
(+43 files in other folders)
