[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plotly-mcp-claude"
version = "0.1.0"
description = "Complete Plotly MCP server for Claude with 49+ trace types and natural language interface"
authors = [{name = "Arshad"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "plotly>=5.0.0",
    "pandas>=2.0.0",
    "httpx>=0.25.0",
    "jinja2>=3.0.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ["py310"]
